Experimented with a couple things. Going to look into storage later. Right now i will need to upload covers onto youtube. But there was another issue which was copywrite. I will need to purchase the rights to each song before I can continue

--- a/Vanilla/static/style.css
+++ b/Vanilla/static/style.css
@@ -115,3 +115,13 @@ footer p a{
     color: inherit;
     font-size: 1rem;
 }
+
+.square{
+    position: absolute;
+    z-index: 1;
+    width: 550px;
+    height: 500px;
+    background-color: white;
+    bottom: 168px;
+    left: 100px;
+}
